--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
     "motion-v": "^1.7.4",
-    "nuxt": "^4.1.3"
+    "nuxt": "^4.1.3",
+    "nuxt-auth-utils": "0.5.25"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.9.0",
