feat: add database with local accounts

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Key used for securing authentication tokens.
 NUXT_SESSION_PASSWORD=SHUTTRSHUTTRSHUTTRSHUTTRSHUTTRSHUTTR
+
+# Postgres database url.
+DATABASE_URL=postgres://shuttr:shuttr@localhost:5432/shuttr
