--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       - postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: shuttr
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: shuttr
+      POSTGRES_PASSWORD: shuttr
       POSTGRES_PORT: 5432
   adminer:
     container_name: adminer
