--- a/package.json
+++ b/package.json
@@ -9,21 +9,33 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "db:push": "drizzle-kit push --config=drizzle.config.ts",
+    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
+    "db:generate:empty": "drizzle-kit generate --custom --config=drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
+    "db:studio": "drizzle-kit studio --config=drizzle.config.ts"
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.70",
     "@iconify-json/simple-icons": "^1.2.55",
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.1.0",
+    "@paralleldrive/cuid2": "^2.3.1",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
+    "drizzle-orm": "^0.44.7",
     "motion-v": "^1.7.4",
     "nuxt": "^4.1.3",
-    "nuxt-auth-utils": "0.5.25"
+    "nuxt-auth-utils": "0.5.25",
+    "nuxt-authorization": "0.3.5",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@nuxt/devtools": "3.0.0-beta.1",
     "@nuxt/eslint": "^1.9.0",
+    "@types/pg": "^8.15.5",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9.38.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.1"
