feat(auth): add support for Authentik

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ NUXT_SESSION_PASSWORD=SHUTTRSHUTTRSHUTTRSHUTTRSHUTTRSHUTTR
 
 # Postgres database url.
 DATABASE_URL=postgres://shuttr:shuttr@localhost:5432/shuttr
+
+# Authentik Auth settings.
+NUXT_OAUTH_AUTHENTIK_DISPLAY_NAME="My Authentik"
+NUXT_OAUTH_AUTHENTIK_DOMAIN="login.example.com"
+NUXT_OAUTH_AUTHENTIK_GROUPS_ADMIN=""
+NUXT_OAUTH_AUTHENTIK_GROUPS_PUBLISHER=""
+NUXT_OAUTH_AUTHENTIK_CLIENT_ID=
+NUXT_OAUTH_AUTHENTIK_CLIENT_SECRET=
