--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "nuxt": "^4.1.3",
     "nuxt-auth-utils": "0.5.25",
     "nuxt-authorization": "0.3.5",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "slugify": "^1.6.6",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@nuxt/devtools": "3.0.0-beta.1",
