feat: add basic photo uploading

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ NUXT_OAUTH_AUTHENTIK_GROUPS_ADMIN=""
 NUXT_OAUTH_AUTHENTIK_GROUPS_PUBLISHER=""
 NUXT_OAUTH_AUTHENTIK_CLIENT_ID=
 NUXT_OAUTH_AUTHENTIK_CLIENT_SECRET=
+
+# Storage options.
+NUXT_STORAGE_TYPE="file"
+NUXT_STORAGE_FILE_BASE="./storage"
