--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,12 @@ services:
     command: ["dex", "serve", "/etc/dex/config.yaml"]
   postgres:
     container_name: postgres
-    image: postgres:latest
+    image: postgis/postgis:latest
     restart: unless-stopped
     ports:
       - 5432:5432
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql
     environment:
       POSTGRES_DB: shuttr
       POSTGRES_USER: shuttr
