--- a/package.json
+++ b/package.json
@@ -24,13 +24,20 @@
     "@paralleldrive/cuid2": "^2.3.1",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
+    "dayjs": "^1.11.19",
     "drizzle-orm": "^0.44.7",
+    "exifreader": "^4.32.0",
     "motion-v": "^1.7.4",
     "nuxt": "^4.1.3",
     "nuxt-auth-utils": "0.5.25",
     "nuxt-authorization": "0.3.5",
+    "p-limit": "^7.2.0",
     "pg": "^8.16.3",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6",
+    "thumbhash": "^0.1.1",
+    "uncrypto": "^0.1.3",
+    "unstorage": "^1.17.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
