feat: add simple display of photos

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,5 @@ NUXT_OAUTH_AUTHENTIK_CLIENT_SECRET=
 
 # Storage options.
 NUXT_STORAGE_TYPE="file"
+NUXT_STORAGE_THUMB_CACHE_MAX="1000"
 NUXT_STORAGE_FILE_BASE="./storage"
