--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.1.0",
     "@paralleldrive/cuid2": "^2.3.1",
+    "@unlazy/nuxt": "^1.0.0",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
     "dayjs": "^1.11.19",
