--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,11 @@ NUXT_OAUTH_AUTHENTIK_CLIENT_SECRET=
 # Storage options.
 NUXT_STORAGE_TYPE="file"
 NUXT_STORAGE_THUMB_CACHE_MAX="1000"
+# Local FS Options
 NUXT_STORAGE_FILE_BASE="./storage"
+# S3 Options
+NUXT_STORAGE_S3_ACCESS_KEY="shuttr"
+NUXT_STORAGE_S3_SECRET_KEY="shuttrshuttr"
+NUXT_STORAGE_S3_BUCKET="shuttr"
+NUXT_STORAGE_S3_ENDPOINT="http://localhost:9000"
+NUXT_STORAGE_S3_REGION="us-west-1"
