--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,20 @@ services:
       - 8080:8080
     environment:
       ADMINER_DEFAULT_SERVER: postgres
+  minio:
+    image: bitnami/minio:latest
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: shuttr
+      MINIO_ROOT_PASSWORD: shuttrshuttr
+      MINIO_DEFAULT_BUCKETS: shuttr:public
+      MINIO_SCHEME: http
+      MINIO_SERVER_URL: http://localhost:9000
+    volumes:
+      - minio:/bitnami/minio/data
 
 volumes:
   postgres: {}
+  minio: {}
