--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@paralleldrive/cuid2": "^2.3.1",
     "@unlazy/nuxt": "^1.0.0",
     "@vueuse/nuxt": "^13.9.0",
+    "aws4fetch": "^1.0.20",
     "better-sqlite3": "^12.4.1",
     "dayjs": "^1.11.19",
     "drizzle-orm": "^0.44.7",
