--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "prettier": "prettier -c --config .prettierrc **",
     "typecheck": "nuxt typecheck",
     "db:push": "drizzle-kit push --config=drizzle.config.ts",
     "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
@@ -48,6 +49,7 @@
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9.38.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.1"
   },
