--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,15 @@ NUXT_OAUTH_AUTHENTIK_GROUPS_PUBLISHER=""
 NUXT_OAUTH_AUTHENTIK_CLIENT_ID=
 NUXT_OAUTH_AUTHENTIK_CLIENT_SECRET=
 
+# Keycloak
+NUXT_OAUTH_KEYCLOAK_DISPLAY_NAME="My Keycloak"
+NUXT_OAUTH_KEYCLOAK_SERVER_URL="https://login.example.com"
+NUXT_OAUTH_KEYCLOAK_GROUPS_ADMIN=""
+NUXT_OAUTH_KEYCLOAK_GROUPS_PUBLISHER=""
+NUXT_OAUTH_KEYCLOAK_CLIENT_ID=
+NUXT_OAUTH_KEYCLOAK_CLIENT_SECRET=
+NUXT_OAUTH_KEYCLOAK_REALM=
+
 # Storage options.
 NUXT_STORAGE_TYPE="file"
 NUXT_STORAGE_THUMB_CACHE_MAX="1000"
