--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 # Key used for securing authentication tokens.
 NUXT_SESSION_PASSWORD=SHUTTRSHUTTRSHUTTRSHUTTRSHUTTRSHUTTR
 
-# Postgres database url.
-DATABASE_URL=postgres://shuttr:shuttr@localhost:5432/shuttr
+# Postgres database.
+# DATABASE_URL=postgres://shuttr:shuttr@localhost:5432/shuttr
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=shuttr
+DATABASE_PASSWORD=shuttr
+DATABASE_DB=shuttr
 
 # Authentik Auth settings.
 NUXT_OAUTH_AUTHENTIK_DISPLAY_NAME="My Authentik"
