feat(postgres): remove postgres url creds method

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 NUXT_SESSION_PASSWORD=SHUTTRSHUTTRSHUTTRSHUTTRSHUTTRSHUTTR
 
 # Postgres database.
-# DATABASE_URL=postgres://shuttr:shuttr@localhost:5432/shuttr
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=shuttr
 DATABASE_PASSWORD=shuttr
 DATABASE_DB=shuttr
+DATABASE_SSL=false
 
 # Authentik Auth settings.
 NUXT_OAUTH_AUTHENTIK_DISPLAY_NAME="My Authentik"
