feat: add basic branding

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ NUXT_STORAGE_S3_SECRET_KEY="shuttrshuttr"
 NUXT_STORAGE_S3_BUCKET="shuttr"
 NUXT_STORAGE_S3_ENDPOINT="http://localhost:9000"
 NUXT_STORAGE_S3_REGION="us-west-1"
+
+# Branding
+NUXT_PUBLIC_TITLE="Shuttr"
+NUXT_PUBLIC_HEADER="Shuttr Photo Gallery"
+NUXT_PUBLIC_DESCRIPTION="Shuttr is a simple to use self-hosted photo gallery for amateurs."
+NUXT_PUBLIC_LINKS='[ { "icon": "i-lucide-house", "to": "https://dany.dev" }, { "icon": "i-simple-icons-github", "to": "https://github.com/dsluijk" }, { "icon": "i-simple-icons-linkedin", "to": "https://www.linkedin.com/in/danysluijk/"} ]'
